# daft

./: CMakeLists.txt  README.md  package.xml  readme.txt  stack.xml
ar_fixed_frame/: CMakeLists.txt  mainpage.dox  manifest.xml
ar_fixed_frame/data/: markers_evaluation
ar_fixed_frame/include/ar_fixed_frame/: fixed_frame_publisher.h
ar_fixed_frame/launch/: ar_fixed_frame_kinect.launch
ar_fixed_frame/src/: fixed_frame_publisher.cpp
camera_info/: depth_A00364916300104A.yaml  rgb_A00364916300104A.yaml  rgb_A00364916300104A_small.yaml
cv_features3d/: CMakeLists.txt  manifest.xml
cv_features3d/include/features3d/: keypoint3d.h
cv_features3d/include/opencv2/features3d/: features3d.hpp  keypoint3d.hpp
cv_features3d/src/: keypoint3d.cpp
daft/: CMakeLists.txt  cmake_install.cmake  manifest.xml
daft/include/daft/: daft.h  descriptor.h  descriptor_computation.h  elliptical_kernel.h  feature_detection.h  filter_kernels.h  gauss3d.h  kernel2d.h  math_stuff.h  preprocessing.h
daft/include/daft2/: daft.h  feature_detection.h  stuff.h
daft/include/rgbd_features_cv/: daft.h  descriptor_computation.h  elliptical_kernel.h  feature_detection.h  filter_kernels.h  kernel2d.h  keypoint3d.h  math_stuff.h  preprocessing.h
daft/src/: daft.cpp  descriptor.cpp  feature_detection.cpp
daft/src/graveyard/: elliptical_kernel.h  gauss9x9.h
daft2/: CMakeLists.txt  cmake_install.cmake  manifest.xml
daft2/include/daft2/: daft.h  daft2.h  depth_filter.h  descriptor.h  elliptical_kernel.h  feature_detection.h  feline.h  filter_kernels.h  gauss.h  gauss3d.h  gauss9x9.h  kernel2d.h  keypoint3d.h  preprocessing.h  stuff.h
daft2/src/: daft.cpp  daft2.cpp  depth_filter.cpp  descriptor.cpp  feature_detection.cpp  graveyard.cpp  keypoint3d.cpp
daft2/src/graveyard/: elliptical_kernel.h  graveyard.cpp  kernel2d.h  preprocessing.h
daft2/test/: test1.cpp
depth_image_proc/: .cproject  .project  .pydevproject  manifest.xml
depth_image_proc/src/nodelets/: convert_metric.cpp  disparity.cpp  point_cloud_xyz.cpp  point_cloud_xyzrgb.cpp  register.cpp
eval/: complete_evaluation.m  descdist.mexglx  display_features.m  find_unmasked_regions.m  get_marks.m  get_vals.m  loadFeatures.m  project_regions.m  repeatability.m  run_all_tests.m  setup_axes.m  smooth_data.m
graveyard/: kernel2d.h
include/daft/: daft.h  dbg.h  depth_filter.h  descriptor.h  feature_detection.h  stuff.h
libdaft/: CMakeLists.txt
libdaft/graveyard/: graveyard.cpp
libdaft/include/daft/: feature_detection.h  feline.h  interpolation.h
libdaft/src/: daft.cpp  depth_filter.cpp  feature_detection.cpp
libdaft/test/: test1.cpp
opencv_ext/: CMakeLists.txt
opencv_extra/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake
opencv_extra/include/features3d/: keypoint3d.h
opencv_extra/src/: keypoint3d.cpp
opencv_features3d/: CMakeLists.txt
opencv_features3d/include/opencv2/features3d/: features3d.hpp
opencv_features3d/src/: keypoint3d.cpp
record_bagfile/: CMakeLists.txt  mainpage.dox  manifest.xml
record_bagfile/include/record_bagfile/: record_bagfile.h
record_bagfile/launch/: record_bagfile.launch  view_bagfile.launch
record_bagfile/src/: record_bagfile.cpp  record_node.cpp  transform_msg_to_tf.cpp
rgbd_evaluator/: CMakeLists.txt  Makefile  dynparam_settings.yaml  extract_all.sh  manifest.xml  nodelets.xml  preprocess_all.sh
rgbd_evaluator/cfg/: openni_params.yaml  rgb_features.cfg  rviz.vcg  update_openni_params.sh
rgbd_evaluator/include/rgbd_evaluator/: apply_blur_noise.h  extract_detector_file.h  extract_keypoints.h  extract_rgbd_features.h  rgbd_evaluator.h  rgbd_evaluator_preprocessing.h  rgbd_preprocessing.h  sift.h  timing.h
rgbd_evaluator/launch/: kinect.launch  rgbd_evaluator.launch  rgbd_evaluator_gui.launch
rgbd_evaluator/matlab/: c_eoverlap.mexa64  complete_evaluation.m  descperf.m  descperf_all.m  descperf_evaluation.m  display_features.m  display_projected_features.m  find_unmasked_regions.m  get_marks.m  get_vals.m  repeatability.m  repeatability_all.m  repeatability_evaluation.m  run_all_tests.m  setup_axes.m  setup_figure.m  smooth_data.m  smooth_plot.m
rgbd_evaluator/src/: apply_blur_noise.cpp  extract_detector_file.cpp  extract_features.cpp  extract_keypoints.cpp  extract_rgbd_features.cpp  find_tracks_node.cpp  rgbd_evaluator.cpp  rgbd_evaluator_node.cpp  rgbd_evaluator_nodelet.cpp  rgbd_evaluator_preprocessing.cpp  rgbd_preprocessing.cpp  sift.cpp  test_rgbd_cv_node.cpp  test_scale_space_node.cpp  test_transpose_node.cpp
rgbd_evaluator/src/parallelsurf/: Image.cpp  KeyPoint.h  KeyPointDescriptor.cpp  KeyPointDescriptorContext.h  KeyPointDetector.cpp  MathStuff.h
rgbd_evaluator/src/sift/: Sift.cpp
rgbd_features/: CMakeLists.txt  manifest.xml
rgbd_features/cfg/: rgb_features.cfg
rgbd_features/include/rgbd_features/: compare_kp_sets.h  dob_filter.h  feature_detection.h  good_features_to_track_filter.h  harris_filter.h  hessian_filter.h  integral_image.h  key_point.h  math_stuff.h  mean_filter.h
rgbd_features/src/: feature_detection.cpp  integral_image.cpp  math_stuff.cpp
rgbd_features_cv/: CMakeLists.txt  cmake_install.cmake
rgbd_features_cv/include/rgbd_features_cv/: daft.h  descriptor_computation.h  feature_detection.h  filter_kernels.h  filters.h  kernel2d.h  keypoint3d.h  math_stuff.h  preprocessing.h  rgbd_cv.h
rgbd_features_cv/src/: daft.cpp  feature_detection.cpp  graveyard.cpp  keypoint3d.cpp  rgbd_cv.cpp
rosdaft/: CMakeLists.txt  manifest.xml
rosdaft/libdaft/: CMakeLists.txt
rosdaft/libdaft/include/daft/: stuff.h
rosdaft/libdaft/include/opencv2/features3d/: keypoint3d.hpp
rosdaft/libdaft/src/graveyard/: graveyard.cpp
rosdaft/libdaft/test/: test1.cpp
src/daft/: CMakeLists.txt  daft.cpp  descriptor.cpp  keypoint3d.cpp
src/tools/: CMakeLists.txt  extract_impl.h
test/: CMakeLists.txt
tools/: CMakeLists.txt
tools/include/: extract_features.h
tools/src/: extract_features.cpp  extract_impl.cpp
