<!-- This file is required if your are using catkin (https://github.com/ros/catkin) as a build system. -->
<package>
  <name>daft</name>
  <version>0.1</version>
  <description>DAFT (Depth Adaptive Feature Transform) - Texture features for RGBD images</description>
  <author email="dgossow@willowgarage.com">David Gossow</author>
  <maintainer email="dgossow@willowgarage.com">David Gossow</maintainer>
  <license>BSD</license>
  <copyright>David Gossow</copyright>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
</package>
